# early-wrapped

./: .gitignore  API_TESTING.md  GETTING_STARTED.md  Makefile  README.md  ROADMAP.md  SESSION_SUMMARY.md  STATUS.md
backend/: .cache  .env.example  dev.sh  pyproject.toml  requirements.txt  test_login.html
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  user.py
backend/app/auth/: __init__.py  router.py
backend/app/schemas/: __init__.py  auth.py
backend/app/services/: __init__.py  spotify.py
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/auth/error/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/dashboard/: page.tsx
